# visualartists

./: README.md
MoscowHistoryAR/: licenses.xml
MoscowHistoryAR/MoscowHistoryARUnity/: Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-Editor.pidb  Assembly-CSharp-firstpass.csproj  Assembly-CSharp-firstpass.pidb  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  Assembly-CSharp.pidb  Assembly-UnityScript-Editor-firstpass-vs.unityproj  Assembly-UnityScript-Editor-firstpass.pidb  Assembly-UnityScript-Editor-firstpass.unityproj  Assembly-UnityScript-firstpass-vs.unityproj  Assembly-UnityScript-firstpass.pidb  Assembly-UnityScript-vs.unityproj  Assembly-UnityScript.pidb  Assembly-UnityScript.unityproj  MoscowHistoryARUnity-csharp.sln  MoscowHistoryARUnity.sln  MoscowHistoryARUnity.userprefs
MoscowHistoryAR/MoscowHistoryARUnity/Assets/: Target.prefab  cubeupdate.cs  floor.mat
MoscowHistoryAR/MoscowHistoryARUnity/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset  TagManager.asset
MoscowHistoryAR/SimplestPluginExample/: Instructions.txt
MoscowHistoryAR/SimplestPluginExample/Unity Project Plugin/: Assembly-CSharp.csproj  (+4 more)
hist/: .vimprj  Balloon.cpp  Balloon.h  CMakeLists.txt  GestureFinder.cpp  GestureFinder.h  StereoAnaliser.cpp  StereoAnaliser.h  algorithm-list.cpp  bgfg-segm.cpp  main.cpp  settings.yml  stereo-match.cpp  viewer.cpp
hist/date/background-photos/: d1  d2
scripts/: bash.desktop  start.sh  start_music.sh  start_music.sh.desktop
stereo/: CMakeLists.txt  stereo-calib.cpp  stereo-match.cpp  take-stereo-pairs.cpp
unityOpencvPlugin/VS2008Plugin/: Plugin.cpp  Plugin2  PluginOld
(+56 files in other folders)
