cmake_minimum_required (VERSION 2.6)
project(stereo)
find_package(OpenCV REQUIRED)
add_executable(take-stereo-pairs take-stereo-pairs.cpp)
target_link_libraries(take-stereo-pairs ${OpenCV_LIBS})
add_executable(stereo-calib stereo-calib.cpp)
target_link_libraries(stereo-calib ${OpenCV_LIBS})
add_executable(stereo-match stereo-match.cpp)
target_link_libraries(stereo-match ${OpenCV_LIBS})
